Feat() Solved Shadow in demo-snippet

--- a/demo/index.html
+++ b/demo/index.html
@@ -43,6 +43,11 @@
         background: var(--adom-header-background, #4184F3);
       }
     }
+    demo-snippet {
+      --demo-snippet-demo: {
+        display:block;
+      };
+    }
     
     .social {
       --adom-header-header: {
