--- a/demo/index.html
+++ b/demo/index.html
@@ -102,8 +102,11 @@
           logo-src="img/logo-web198x70.png"
           alt-title="ADominguez"
           top-header>
-            <div class="top-header">
-              Contenido
+            <div class="content-top-header">
+              Top content
+            </div>
+            <div class="content-right-header">
+              Right content
             </div>
           </adom-header>
         </template>
