Fix(html, index.html) Add fire event icon and doc

--- a/adom-header.html
+++ b/adom-header.html
@@ -191,7 +191,7 @@ In order to apply the `Roboto` font to this element, make sure you've imported `
         }
       },
       _onNavigationChange: function() {
-        alert('Hola, pasa por aquí')
+        this.fire('adom-header-icon-navigation')
       },
       _onLogoChange: function() {
 
