--- a/demo/index.html
+++ b/demo/index.html
@@ -82,7 +82,10 @@
     <div>
       <div class="component-info">
         <h2 class="component-name">Basic header with navigation</h2>
-        <div class="component-description">Use this for a simple header only with a title</div>
+        <div class="component-description">
+          <p>Use this for a simple header only with a title</p>
+          <p>Import an iconset if you want to use de icon-navigation property in your proyect, for example, you can import polymer component <a href="https://www.webcomponents.org/element/PolymerElements/iron-icons" target="_blank">iron-icons</a> for his use.</p>
+        </div>
       </div>
       <demo-snippet>
         <template>
