--- a/demo/index.html
+++ b/demo/index.html
@@ -103,6 +103,7 @@
           <adom-header 
           class="top" 
           logo-src="img/logo-web198x70.png"
+          title="adominguez"
           alt-title="ADominguez"
           top-header>
             <div class="content-top-header">
