--- a/adom-header.html
+++ b/adom-header.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-image/iron-image.html">
 <link rel="import" href="../iron-icon/iron-icon.html">
 
 <!--
@@ -147,6 +146,9 @@ In order to apply the `Roboto` font to this element, make sure you've imported `
           <template is="dom-if" if="{{title}}">
             <h2 id="title" class="title" title="[[altTitle]]">[[title]]</h2>
           </template>
+        </div>
+        <div class="content-left">
+          <content select=".content-left-header"></content>
         </div>
         <div class="content-right">
           <content select=".content-right-header"></content>
