--- a/adom-header.html
+++ b/adom-header.html
@@ -1,222 +1,34 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-icon/iron-icon.html">
+<link rel="import" href="adom-header-styles.html">
 
 <!--
-`adom-header` is component for to use in top header of website. You can add a title, logo, social icons...
+`adom-header`
+A component description
 
-`adom-header`.
-
-Example:
-
-    <adom-header title="Your title" logo="your-logo.jpg">
-    </adom-header>
-
-### Styling
-
-The following custom properties and mixins are available for styling:
-
-Custom property | Description | Default
-----------------|-------------|----------
-`--adom-header-wrapper` | Mixin applied to wrapper of header | `{}`
-`--adom-header-social` | Mixin applied to social content | `{}`
-`--adom-header-social-color` | Color of social content | `#fff`
-`--adom-header-social-background` | background color of social content | `{}`
-`--adom-header-header` | background color of social content | `{}`
-`--adom-header-social-background` | background color of social content | `{}`
-`--adom-header-social-background` | background color of social content | `{}`
-
-This element applies the mixin `--paper-font-common-base` but does not import `paper-styles/typography.html`.
-In order to apply the `Roboto` font to this element, make sure you've imported `paper-styles/typography.html`.
-
-@demo demo/index.html
+@demo demo/index.html 
 -->
 
 <dom-module id="adom-header">
+  <style include="adom-header-styles adom-header-shared-styles"></style>
   <template>
-    <style>
-
-      :host(.vertical) .wrapper {
-        width: 300px;
-        flex: 1 1 auto;
-        @apply(--adom-header-wrapper);
-      }
-      :host(.vertical) img {
-        width: 100%;
-      }
-      :host(.vertical) .header {
-        width:100%;
-        padding:0.5em;
-        box-sizing: border-box;
-        display:inline-block;
-        color: var(--adom-header-color, #fff);
-        background: var(--adom-header-background, #4184F3);
-        @apply(--adom-header-header);
-      }
-      :host(.vertical) .logo {
-        width: 100%;
-        @apply(--adom-header-logo);
-      }
-      :host(.vertical) .content {
-        width:100%;
-        @apply(--adom-header-content);
-      }
-
-      :host(.top) .wrapper{
-        -webkit-box-shadow: 0px 2px 5px 1px rgba(166,166,166,0.75);
-        -moz-box-shadow: 0px 2px 5px 1px rgba(166,166,166,0.75);
-        box-shadow: 0px 2px 5px 1px rgba(166,166,166,0.75);
-        @apply(--adom-header-wrapper);
-      }
-
-
-      .wrapper {
-        @apply(--adom-header-wrapper);
-      }
-      .top {
-        width:100%;
-        -webkit-flex-direction: row;
-        flex-direction: row;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        padding:0.5em;
-        box-sizing: border-box;
-        color: var(--adom-header-top-color, #fff);
-        background: var(--adom-header-top-background, #2ba14b);
-        @apply(--adom-header-top);
-      }
-      .header {
-        width:100%;
-        flex-wrap: wrap;
-        -webkit-flex-direction: row;
-        flex-direction: row;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        padding:0.5em;
-        box-sizing: border-box;
-        color: var(--adom-header-color, #fff);
-        background: var(--adom-header-background, #4184F3);
-        align-items: center;
-        @apply(--adom-header-header);
-      }
-      .icon-navigation {
-        padding:1em;
-        cursor: pointer;
-        @apply(--adom-header-icon-navigation);
-      }
-      .icon-navigation:focus {
-        @apply(--adom-header-icon-navigation-focus);
-      }
-      .icon-navigation:hover {
-        @apply(--adom-header-icon-navigation-hover);
-      }
-      .logo {
-        display: flex;
-        cursor: pointer;
-        align-items: center;
-        @apply(--adom-header-logo);
-      }
-      .title {
-        margin: 0.2em;
-        @apply(--adom-header-title);
-      }
-      .content-right {
-        display: flex;
-        margin: 0.2em;
-        @apply(--adom-header-right-content);
-      }
-      .top {
-        @apply(--adom-header-top-content);
-      }
-      [hidden] {
-        display: none;
-      }
-    </style>
-    <header class="wrapper">
-      <div class="top" hidden$="[[!topHeader]]">
-        <content select=".content-top-header"></content>
+    <header class="header">
+      <div class="header__left-content">
+        <button id="buttonNavigation" class="header__left-content__button-navigation" on-tap="buttonNavigation">
+          <iron-icon id="icon-navigation" class="icon-navigation" icon="{{iconNavigation}}"></iron-icon>
+        </button>
+        <img id="logo" class="header__left-content__logo" src$="[[imgSrc]]" alt$="[[altImage]]">
+        <div id="heading" class="header__left-content__heading" aria-level$="[[ariaHeadingLevel]]">[[heading]]</div>
+        <content select=".left-content"></content>
       </div>
-      <div class="header">
-        <iron-icon icon="{{iconNavigation}}" class="icon-navigation" hidden$="{{_navigationHidden()}}" on-tap="_onNavigationChange"></iron-icon>
-        <div class="logo" on-tap="_onLogoChange">
-          <template id="logo-template" is="dom-if" if="{{logoSrc}}">
-            <img id="imgLogo" src="{{logoSrc}}" alt="[[altTitle]]" title="[[altTitle]]" />
-          </template>
-          <template is="dom-if" if="{{title}}">
-            <h2 id="title" class="title" title="[[altTitle]]">[[title]]</h2>
-          </template>
-        </div>
-        <div class="content-left">
-          <content select=".content-left-header"></content>
-        </div>
-        <div class="content-right">
-          <content select=".content-right-header"></content>
-        </div>
+      <div class="header__center-content">
+        <content select=".center-content"></content>
+      </div>
+      <div class="header__right-content">
+        <content select=".right-content"></content>
       </div>
     </header>
+
   </template>
-
-  <script>
-    Polymer({
-
-      is: 'adom-header',
-
-      properties: {
-        /**
-         * It Show a top header container for social icons, information...
-         * It allow insert your content with content-top-header class
-         */
-        topHeader: {
-          type: Boolean,
-          value:false
-        },
-        /**
-         * name icon for navigation.
-         */
-        iconNavigation: {
-          type: String,
-          value: ''
-        },
-        /**
-         * Title of header.
-         */
-        title: {
-          type: String
-        },
-        /**
-         * The URL of logo.
-         */
-        logoSrc: {
-          type: String
-        },
-        altTitle: {
-          type: String
-        },
-        vertical: {
-          type: Boolean,
-          observer: "_onVerticalChange"
-        }
-      },
-      _onNavigationChange: function() {
-        this.fire('adom-header-icon-navigation')
-      },
-      _onLogoChange: function() {
-        this.fire('adom-header-logo-change')
-      },
-      _onVerticalChange : function(vertical) {
-        if(vertical) {
-          this.classList.add("vertical")
-        }
-      },
-      _navigationHidden : function() {
-        var icon = Polymer.dom(this.root).querySelector('iron-icon').icon;
-        if(icon) {
-          return false;
-        }
-        return true;
-      }
-
-    });
-  </script>
+  <script src="adom-header.js"></script>
 </dom-module>
